[package]
name = "splunklib_rust"
version = "0.2.0"
edition = "2024"

[lib]
path = "lib/mod.rs"

[dependencies]
hostname = "0.4.2"
walkdir = "2.5.0"
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "gzip",
    "stream",
    "native-tls",
] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
flate2 = "1.1.5"
once_cell = "1.21.3"
tracing = "0.1.44"
url = "2.5.7"
bytes = "1.11.0"
futures-util = "0.3.31"
arc-swap = "1.8.0"
dashmap = "6.1.0"
uuid = { version = "1.19.0", features = ["v4", "v7"] }
crossbeam-channel = "0.5.15"
rand = "0.9.2"

[target.'cfg(not(target_has_atomic = "64"))'.dependencies]
portable-atomic = "1.12.0"

# Use vendored OpenSSL only on Unix (Windows uses SChannel via native-tls automatically)
[target.'cfg(unix)'.dependencies.reqwest]
version = "0.12.28"
default-features = false
features = ["json", "gzip", "stream", "native-tls", "native-tls-vendored"]
